# feature-store-monitoring-ops

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  operations.md  release_checklist.md  system_card.md
reports/: api_serving_summary.md  drift_monitoring_metrics.json  drift_monitoring_summary.md  model_metrics.json  model_training_summary.md  offline_feature_summary.md  online_feature_materialization_summary.md  relational_storage_inspection_summary.md  relational_storage_sync_summary.md  serving_monitoring_metrics.json  serving_monitoring_summary.md  storage_inspection_summary.md  storage_sync_summary.md  synthetic_events_summary.md
reports/portfolio/: docker_smoke_summary.md  portfolio_scale_summary.md  portfolio_summary.md  release_gate_0.1.0.json  release_gate_0.1.0.md  verification_0.1.0.md  workflow_results.json  workflow_summary.md
scripts/: docker_smoke_test.sh
src/feature_store_monitoring_ops/: __init__.py  cli.py  paths.py  release_gate.py  release_verification.py  schema.py  synthetic_events.py  workflow.py
src/feature_store_monitoring_ops/api/: __init__.py  app.py  safety.py  schemas.py  service.py
src/feature_store_monitoring_ops/features/: __init__.py  contract.py  offline.py  online.py
src/feature_store_monitoring_ops/models/: __init__.py  training.py
src/feature_store_monitoring_ops/monitoring/: __init__.py  drift.py  serving.py  telemetry.py
src/feature_store_monitoring_ops/storage/: __init__.py  config.py  online.py  relational.py  sync.py  telemetry.py
tests/: test_api_serving.py  test_docker_ops.py  test_drift_monitoring.py  test_model_training.py  test_offline_features.py  test_online_features.py  test_relational_storage.py  test_release_hardening.py  test_serving_telemetry_monitoring.py  test_storage_adapters.py  test_synthetic_events.py  test_workflow.py
