[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "feature-store-monitoring-ops"
version = "0.1.0"
description = "Production-style ML feature store and monitoring system."
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "pyarrow",
    "typer",
]

[project.scripts]
feature-store-ops = "feature_store_monitoring_ops.cli:app"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
