[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "feature-store-monitoring-ops"
version = "0.1.0"
description = "Production-style ML feature store and monitoring system."
requires-python = ">=3.11"
dependencies = [
    "anyio>=4.9,<4.10",
    "fastapi>=0.115,<0.116",
    "httpx>=0.27,<0.28",
    "joblib",
    "pandas",
    "pyarrow",
    "redis>=5.0,<6.0",
    "scikit-learn",
    "sqlalchemy>=2.0,<3.0",
    "typer",
    "uvicorn>=0.30,<0.31",
]

[project.scripts]
feature-store-ops = "feature_store_monitoring_ops.cli:app"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
