[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "feature-store-monitoring-ops"
version = "0.1.0"
description = "Production-style ML feature store and monitoring system."
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
dependencies = [
    "anyio>=4.9,<4.10",
    "fastapi>=0.115,<0.116",
    "httpx>=0.27,<0.28",
    "joblib",
    "pandas",
    "pyarrow",
    "psycopg[binary]>=3.1,<4.0",
    "redis>=5.0,<6.0",
    "scikit-learn",
    "sqlalchemy>=2.0,<3.0",
    "typer",
    "uvicorn>=0.30,<0.31",
]

[project.scripts]
feature-store-ops = "feature_store_monitoring_ops.cli:app"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    # Release warning budget: warnings emitted by project-owned modules fail tests.
    "error::Warning:feature_store_monitoring_ops.*",
    # joblib 1.x can emit this while unpickling sklearn artifacts under NumPy 2.5.
    # Keep the filter exact so unrelated deprecations remain visible.
    "ignore:Setting the shape on a NumPy array has been deprecated in NumPy 2\\.5\\.:DeprecationWarning:joblib\\.numpy_pickle",
]
